# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.314 2006-11-22 06:32:54 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
2.1.4 (2006/??/??)
 - (2006/11/22) fixed bug #1395 - utf-8 - ArticleStorage FS - Attachments with
    German Umlauts cant be downloaded
 - (2006/11/17) added config option Ticket::PendingNotificationOnlyToOwner
    to send reached reminder notifications of unlocked tickets only to ticket
    owner
 - (2006/11/17) fixed database driver detection/problem if a second database
    connect with different driver is used (wrong sql will not longer be
    generated) Note: old database driver files Kernel/System/DB/*.pm
    not longer compatible
 - (2006/11/17) added config option Ticket::ResponsibleAutoSet to set owner
    automatically as responsible if no responsible is set (default is 1)

2.1.3 (2006/11/15)
 - (2006/11/15) removed not needed Reply-To of agent notifications
 - (2006/11/15) fixed missing \n on csv output of customer ticket search
 - (2006/11/15) fixed not working ticket free time option in phone ticket
 - (2006/11/15) added missing access permission pre check to show ticket menu
    items or not
 - (2006/11/15) fixed bug - not shown empty "-" selection of new onwer if on
    move if Ticket::ChangeOwnerToEveryone is set
 - (2006/11/10) update of Dansk language file, thanks to Mads N. Vestergaard
 - (2006/11/10) update of Spanish language file, thanks to Jorge Becerra
 - (2006/11/09) added AuthModule::HTTPBasicAuth::Replace and
    Customer::AuthModule::HTTPBasicAuth::Replace config option to HTTPBasicAuth
    modules to strip e. g. domains like example_domain\user from login down to user
 - (2006/11/09) added AuthModule::LDAP::UserLowerCase to allways convert
     usernames into lower case letters