@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketZoom.pm - to get a closer view
 # Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
 # --
-# $Id: AgentTicketZoom.pm,v 1.27 2006-11-13 06:27:27 martin Exp $
+# $Id: AgentTicketZoom.pm,v 1.28 2006-11-22 19:29:57 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -16,7 +16,7 @@ use Kernel::System::CustomerUser;
 use Kernel::System::LinkObject;
 
 use vars qw($VERSION);
-$VERSION = '$Revision: 1.27 $';
+$VERSION = '$Revision: 1.28 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 sub new {
@@ -361,7 +361,7 @@ sub MaskAgentZoom {
         }
         else {
             # html quoting
-            $Article{"Body"} = $Self->{LayoutObject}->Ascii2Html(
+            $Article{"BodyHTML"} = $Self->{LayoutObject}->Ascii2Html(
                 NewLine => $Self->{ConfigObject}->Get('DefaultViewNewLine') || 85,
                 Text => $Article{Body},
                 VMax => $Self->{ConfigObject}->Get('DefaultViewLines') || 5000,
@@ -378,7 +378,7 @@ sub MaskAgentZoom {
         }
         $Self->{LayoutObject}->Block(
              Name => 'Body',
-             Data => {%Param, %Article, %AclAction},
+             Data => {%Param, %Article, Body => $Article{"BodyHTML"}, %AclAction},
         );
         # show article tree
         if ($Count == 1) {
